benchmark output normalized